--- a/README
+++ b/README
@@ -3,6 +3,6 @@ Debian
 
 Container for Debian: https://www.debian.org/releases/jessie/
 
-Docker needs extra steps to clean up images after installing packages (https://docs.docker.com/engine/userguide/eng-image/dockerfile_best-practices/) and I've had terrible luck with the apt mirrors failing so I wrote a helper with retries and Docker's best practices. Use `docker-apt-install PACKAGE` instead of `apt-get install PACKAGE` and installs will be reliable and keep the image as small as possible.
+Docker needs extra steps to clean up images after installing packages (https://docs.docker.com/engine/userguide/eng-image/dockerfile_best-practices/) and I've had terrible luck with the apt mirrors failing so I wrote a helper with Docker's best practices and retries. Use `docker-apt-install PACKAGE` instead of `apt-get install PACKAGE` and installs will be reliable and keep the image as small as possible.
 
-I still prefer to use the Alpine image since it is way smaller, but a lot of things are easy to install on Debian.
+I still prefer to use the bwstitt/library-alpine image since it is way smaller, but a lot of things are easiest to install on Ubuntu since that is where the author develops them.
